# Polygon-Arbitrage-Opportunity-Detector-Bot

./: .env  .gitignor  Cargo.toml  Dockerfile  README.md  arb_opportunities.db  dashboard.html  landing.html
src/: main.rs  uniswap.rs
static/: landing.html
