[package]
name = "Polygon-Arbitrage-Opportunity-Detector-Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }
ethers = { version = "2.0.14", features = ["abigen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
once_cell = "1.17.1"

