[package]
name = "polygon_arb_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ethers = "2.0"
rusqlite = { version = "0.29", features = ["bundled"] }
dotenv = "0.15"
once_cell = "1.20"
chrono = "0.4"
env_logger = "0.10"
anyhow = "1.0"
log = "0.4"



